fix overlap of panel header and tile picture

--- a/src/App.scss
+++ b/src/App.scss
@@ -42,6 +42,7 @@ html {
 }
 
 .ContentPanel__Header {
+  z-index: 5;
   border-bottom: 1px solid rgb(247, 247, 247);
   background-color: rgb(236,236,236);
   padding: 4px 8px;
